tests/expectations/compiler/async_blocks/future_in_tuple_check_fail.out
Error [ETYC0372104]: Not all Finals were consumed: result2
    --> compiler-test:9:33
     |
   9 |         return (result.0, final { result.1.run(); });
     |                                 ^^^^^^^^^^^^^^^^^^^
     |
     = Make sure all Finals are consumed exactly once. Consume by passing to a final fn call or final block.
